infra/k8s/event-bus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus # pod label
  template:
    metadata:
      labels:
        app: event-bus # NAME FOR OUR POD
    spec:
      # configuration for pod
      containers:
      - name: event-bus
        image: 199619961234/event-bus:latest
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-cluster-ip-service
spec:
  selector:
    app: event-bus # pod label
  ports:
  - name: event-bus # pod label
    protocol: TCP
    port: 4005
    targetPort:  4005 # port used in the application (container)
