infra/k8s/ingress-service.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: posts.com # save this host to /etc/host and match with minikube ip
    http:
      paths:
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: posts-cluster-ip-service # redirect all posts API to posts microservice
            port: 
              number: 4000
